--- a/PPl3/Areas/Admin/Views/HomeAdmin/Index.cshtml
+++ b/PPl3/Areas/Admin/Views/HomeAdmin/Index.cshtml
@@ -23,7 +23,7 @@
     {
         hotel_rate = (decimal)db.properties.Where(item => item.p_status == 1).Count() / totalProperties * 100;
     }
-    List<PPl3.Models.user> lstUser = db.users.Where(item =>  item.user_type != 1).ToList();
+    List<PPl3.Models.user> lstUser = db.users.Where(item => item.user_type != 1).ToList();
     List<PPl3.Models.user> lstHost = db.users.Where(item => item.user_type == 3).ToList();
     List<PPl3.Models.property> lstHotel = db.properties.Where(item => item.p_status == 1).ToList();
 
@@ -40,10 +40,10 @@
     <meta charset="UTF-8">
     <title> Responsive Sidebar Menu  | CodingLab </title>
     <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZf3I4TkruOraYvnm7WbRSU3qYV2Lkj3_0w3wfgQrApnsvo-yspjafW8P57Demy0zgf6U&usqp=CAU">
-    <link href="~/ExtraFiles/assets/css/admin.css?v=6" rel="stylesheet" />
+    <link href="~/ExtraFiles/assets/css/admin.css?v=8" rel="stylesheet" />
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="~/ExtraFiles/assets/css/profile.css?v=3">
+    <link rel="stylesheet" href="~/ExtraFiles/assets/css/profile.css?v=4">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style id="img-style">
@@ -130,7 +130,7 @@
             <div class="logo_name">T|.|N|.|T</div>
             <i class='bx bx-menu' id="btn"></i>
         </div>
-        <ul class="nav-list">
+        <ul class="nav-list" style="">
             <li>
                 <i class='bx bx-search'></i>
                 <input type="text" placeholder="Search...">
@@ -151,8 +151,18 @@
                 <span class="tooltip">User</span>
             </li>
             <li>
-                <a href="#">
+                @if(@db.user_notification.Where(item => item.userid == 20 && item.un_status == 0).ToArray().Length > 0) { 
+                    <span class="position-absolute top-0 start-50  badge rounded-pill bg-danger notification_bell">
+                        @db.user_notification.Where(item => item.userid == 20 && item.un_status == 0).ToArray().Length
+                    </span>
+                } 
+                else { 
+                    <span class="position-absolute top-0 start-50  badge rounded-pill bg-danger notification_bell"></span>
+                }
+                <a onclick="readNotification()">
+
                     <i class='bx bx-bell'></i>
+
                     <span class="links_name">Notification</span>
                 </a>
                 <span class="tooltip">Notification</span>
@@ -377,7 +387,7 @@
                             <div class="btn_handle center">
                                 <button onclick="window.location.href = '/admin/homeadmin/confirm_host?user_id=@item.user_id'">Accept</button>
                                 <span>|</span>
-                                <button onclick="window.location.href = '/admin/homeadmin/host_denied?user_id=@item.user_id'">Refuse</button>
+                                <button onclick="host_denied('@item.user_id')">Refuse</button>
                             </div>
                         </div>
                     </div>
@@ -475,11 +485,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="btn_handle center">
-                                    <button onclick="window.location.href ='/admin/homeadmin/confirm_hotel?hotel_id=@item.property_id& user_id=@item.property.userId'">Accept</button>
-                                    <span>|</span>
-                                    <button onclick="window.location.href ='/admin/homeadmin/hotel_denied?hotel_id=@item.property_id& user_id=@item.property.userId'">Refuse</button>
-                                </div>
+
+                            </div>
+                            <div class="btn_handle center">
+                                <button onclick="window.location.href ='/admin/homeadmin/confirm_hotel?hotel_id=@item.property_id& user_id=@item.property.userId'">Accept</button>
+                                <span>|</span>
+                                <button onclick="hotel_denied('@item.property.userId' , '@item.property_id')">Refuse</button>
                             </div>
                             <div class="corner corner_top_left">
                                 <i class="fa-solid fa-swatchbook"></i>
@@ -699,7 +710,7 @@
                             <div class="btn_handle center">
                                 <button onclick="window.location.href = '/admin/homeadmin/confirm_host?user_id=@item.user_id'">Accept</button>
                                 <span>|</span>
-                                <button onclick="window.location.href = '/admin/homeadmin/host_denied?user_id=@item.user_id'">Refuse</button>
+                                <button onclick="host_denied('@item.user_id')">Refuse</button>
                             </div>
                         </div>
                     </div>
@@ -797,11 +808,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="btn_handle center">
-                                    <button onclick="window.location.href ='/admin/homeadmin/confirm_hotel?hotel_id=@item.property_id&user_id=@item.property.userId'">Accept</button>
-                                    <span>|</span>
-                                    <button onclick="window.location.href ='/admin/homeadmin/hotel_denied?hotel_id=@item.property_id&user_id=@item.property.userId'">Refuse</button>
-                                </div>
+
+                            </div>
+                            <div class="btn_handle center">
+                                <button onclick="window.location.href ='/admin/homeadmin/confirm_hotel?hotel_id=@item.property_id&user_id=@item.property.userId'">Accept</button>
+                                <span>|</span>
+                                <button onclick="hotel_denied('@item.property.userId' , '@item.property_id')">Refuse</button>
                             </div>
                             <div class="corner corner_top_left">
                                 <i class="fa-solid fa-swatchbook"></i>
@@ -1163,7 +1175,68 @@
             </div>
         </div>
         <div id="notification">
+            <div class="text"><i class="fa-solid fa-user"></i>Notification</div>
+            <div class="container_notifi">
+                <div class="item_notifi">
+                    <div class="tittle" style="width : 265px">
+                        <span>Request host approval</span>
+                    </div>
+                    <ul class="list_notifi">
+                        @foreach (var item in db.user_notification.OrderByDescending(row => row.created))
+                        {
+                            if (item.userid == 20 && item.content.Contains("host"))
+                            {
+                                <li>
+                                    <div class="logo">
+                                        <i class="fa-brands fa-think-peaks"></i>
+                                    </div>
+                                    <div>
+                                        <div class="content_notifi">
+                                            <p>@item.content</p>
+                                        </div>
+                                        <div class="time">
+                                            <span>@item.created.Value.ToString("hh:MM:tt") @item.created.Value.ToString("dd/MM/yyyy")</span>
+                                        </div>
+                                    </div>
+                                    <div class="close_btn" onclick="deleteNotification('@item.id')">
+                                        <i class="fa-solid fa-xmark"></i>
+                                    </div>
+                                </li>
+                            }
+                        }
+                    </ul>
+                </div>
+                <div class="item_notifi">
+                    <div class="tittle" style="width : 265px">
+                        <span>Request hotel approval</span>
+                    </div>
+                    <ul class="list_notifi">
+                        @foreach (var item in db.user_notification.OrderByDescending(row => row.created))
+                        {
+                            if (item.userid == 20 && item.content.Contains("Hotels"))
+                            {
+                                <li>
+                                    <div class="logo">
+                                        <i class="fa-brands fa-think-peaks"></i>
+                                    </div>
+                                    <div>
+                                        <div class="content_notifi">
+                                            <p>@item.content</p>
+                                        </div>
+                                        <div class="time">
+                                            <span>@item.created.Value.ToString("hh:MM:tt") @item.created.Value.ToString("dd/MM/yyyy")</span>
+                                        </div>
+                                    </div>
+                                    <div class="close_btn" onclick="deleteNotification('@item.id')">
+                                        <i class="fa-solid fa-xmark"></i>
+                                    </div>
+                                </li>
 
+                            }
+                        }
+                    </ul>
+                </div>
+            </div>
         </div>
         <div id="analytics">
             <div class="text"><i class="fa-solid fa-gauge"></i>Analytics</div>
@@ -1210,18 +1283,22 @@
                             </thead>
                             <tbody>
                                 @foreach (var item in db.properties)
+                                {
+                                    foreach (var row in db.transactions)
+                                    {
+                                        if (row.property_id == item.id)
                                         {
-                                            foreach(var row in db.transactions) {
-                                                if(row.property_id == item.id) {
-                                                    sum_revenue = sum_revenue + (double)row.amount;
-                                                }
-                                            }
-                                            foreach(var row in db.property_reviews) {
-                                                if(row.property_id == item.id) {
-                                                    sum_star = sum_star + (double)row.overall_rating;
-                                                }
-                                            }
-                                            sum_star = sum_star / db.property_reviews.ToArray().Length;
+                                            sum_revenue = sum_revenue + (double)row.amount;
+                                        }
+                                    }
+                                    foreach (var row in db.property_reviews)
+                                    {
+                                        if (row.property_id == item.id)
+                                        {
+                                            sum_star = sum_star + (double)row.overall_rating;
+                                        }
+                                    }
+                                    sum_star = sum_star / db.property_reviews.ToArray().Length;
                                     <tr class="hotel_@item.id hotel">
                                         <td>
                                             @item.p_name
@@ -1266,12 +1343,12 @@
             <div class="container_analytics">
                 <div class="list_hotel_analytics">
                     <div class="list_item item_7">
-                        <div class="tittle">
+                        <div class="tittle" style="width:204px">
                             <span>Revenue of month</span>
                         </div>
                         <div class="btn_by_year">
                             <select name="" id="by_year_admin" style="margin-bottom: 30px">
-                                @{ 
+                                @{
                                     selected_year = new List<int>();
                                 }
                                 @foreach (var item in db.transactions.ToList().OrderByDescending(item => item.transfer_on.Value.Year))
@@ -1292,7 +1369,7 @@
                         </div>
                     </div>
                     <div class="list_item item_3">
-                        <div class="tittle">
+                        <div class="tittle" style="width:204px">
                             <span>Revenue of year</span>
                         </div>
                         <!-- <div class="btn_by_year" style="text-align: center;">
@@ -1706,7 +1783,7 @@
             labels: @Html.Raw(Json.Encode(selected_year.OrderBy(item => item).ToArray())),
             datasets: [{
                 label: 'Admin income statistics',
-               
+
                 fill: false,
                 borderColor: 'rgb(75, 192, 192)',
                 tension: 0.1
@@ -1723,6 +1800,8 @@
 </script>
 <script src="~/Scripts/jquery-3.7.1.js"></script>
 <script src="~/Scripts/jquery-3.7.1.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script>
     //function confirm_host(user_id) {
     //    $.ajax({
@@ -1782,7 +1861,7 @@
     //        }
     //    })
     //}
-    function hotel_denied(user_id , property_id) {
+    function hotel_denied(user_id, property_id) {
         $.ajax({
             url: `/admin/homeadmin/hotel_denied`,
             type: "POST",
@@ -1793,7 +1872,7 @@
                 var containerInforHotel = document.querySelector(`.container_info_hotel[class*="${property_id}"]`);
                 containerInforHotel.classList.add(`animationInfor`)
                 inforHotelDetail.classList.remove('openHost');
-                document.querySelector(`.property_${property_id}`).classList.add(close);
+                document.querySelector(`.property_${property_id}`).classList.add('close');
 
             },
             error: function (err) {
@@ -1803,20 +1882,20 @@
     }
     function AcceptAll(check) {
         let list_selects, list_id;
-        list_id = []; 
+        list_id = [];
 
         if (check == 1) {
             list_selects = document.querySelector('.list_item.list_owner').querySelectorAll('.ticked');
-           
+
             list_selects.forEach((item) => {
                 let id = item.classList.value.split(" ")[0];
-               
+
                 list_id.push(id);
             });
             console.log(1);
         } else {
             list_selects = document.querySelector('.list_item.list_hotel').querySelectorAll('.ticked');
-             
+
             list_selects.forEach((item) => {
                 let hotel_id = item.classList.value.split(" ")[1];
                 list_id.push(hotel_id);
@@ -2072,7 +2151,7 @@
             data: { search: search_text },
             success: function (response) {
                 console.log(response);
-                
+
                 document.querySelectorAll('.list_item.item_7 .hotel').forEach(function (element) {
                     if (response.indexOf(parseInt(element.classList.value.split(" ")[0].split("_")[1])) != -1) {
                         if (element.classList.contains("disapear")) {
@@ -2084,8 +2163,8 @@
                     }
                 })
                 console.log("true");
-               
-                
+
+
             },
             error: function (xhr, status, error) {
                 console.error(error);
@@ -2204,6 +2283,55 @@
             }
         })
     }
+
+
+    // notification
+
+
+    function readNotification() {
+        $.ajax({
+            url: '/admin/homeadmin/readNotification',
+            type: "GET",
+            success: function (response) {
+                console.log(response);
+                document.querySelector('.notification_bell').textContent = '';
+
+
+            },
+            error: function (xhr, status, error) {
+                console.error(error);
+                console.log('Status:', status);
+                console.log('Error:', error);
+                console.log('Response:', xhr.responseText);
+            }
+        })
+        
+        
+    }
+
+    function deleteNotification(id) {
+        $.ajax({
+            url: '/admin/homeadmin/deleteNotification',
+            type: "POST",
+            dataType: "json",
+            data: {id : id},
+            success: function (response) {
+                console.log(response);
+               
+
+            },
+            error: function (xhr, status, error) {
+                console.error(error);
+                console.log('Status:', status);
+                console.log('Error:', error);
+                console.log('Response:', xhr.responseText);
+            }
+        })
+    }
+
+
+
+
 
 
     //function search(key, kind) {
